--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <title>Instagram photo feed with bootstrap</title>
@@ -12,10 +12,10 @@
 <body>
     <div class="container-fluid p-0">
         <nav class="navbar navbar-light bg-light d-flex justify-content-between p-3">
-            <div>
+            <div class="left">
                  <i class="fa-brands fa-instagram"> instagram</i>
             </div>
-            <div>
+            <div class="right">
                 <button type="button" class="btn btn-success">Create a new post</button>
                 <button type="button" class="btn btn-secondary ms-1">
                     <i class="fa-solid fa-gear"></i>
@@ -24,6 +24,10 @@
             </div>
 
     </nav>
+    <div class="container d-flex justify-content-center align-items-center mt-3 mb-3">
+        <i class="bi bi-grid-3x3"></i>
+        <i class="bi bi-square-fill ms-3"></i>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
