--- a/index.html
+++ b/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    
-    <title>Instagram photo feed with bootstrap</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <title>Instagram photo feed with bootstrap</title>
 </head>
 <body>
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-light bg-light d-flex justify-content-between p-3">
-            <div class="left">
-                 <i class="fa-brands fa-instagram"> instagram</i>
-            </div>
-            <div class="right">
-                <button type="button" class="btn btn-success">Create a new post</button>
-                <button type="button" class="btn btn-secondary ms-1">
-                    <i class="fa-solid fa-gear"></i>
-                    <i class="fa-solid fa-caret-down"></i>
-                </button>
-            </div>
-
+  <div class="container-fluid p-0">
+    <nav class="navbar navbar-light bg-light d-flex justify-content-between p-3">
+      <div class="left">
+        <i class="fa-brands fa-instagram"> instagram</i>
+      </div>
+      <div class="right">
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#new-post-modal">
+          Create a New Post
+        </button>
+        <button type="button" class="btn btn-secondary ms-1">
+          <i class="fa-solid fa-gear"></i>
+          <i class="fa-solid fa-caret-down"></i>
+        </button>
+      </div>
     </nav>
     <div class="container d-flex justify-content-center align-items-center mt-3 mb-3">
-        <i class="bi bi-grid-3x3"></i>
-        <i class="bi bi-square-fill ms-3"></i>
+      <i class="bi bi-grid-3x3"></i>
+      <i class="bi bi-square-fill ms-3"></i>
     </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="new-post-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Create a new post</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form class="d-inline ">
+                <label for="caption"><b>Caption:</label><br>
+            <textarea name="caption" class="w-100 border-secondary" placeholder="Add the caption of your post here"></textarea><br>
+            </form>
+            <i class="fa-solid fa-camera border rounded p-2 bg-light"></i>
+            <i class="fa-solid fa-location-dot border rounded p-2 bg-light"></i>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-success">Publish</button>
+        </div>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </div>
+
+  <!-- Bootstrap JS bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
