--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#new-post-modal">
           Create a New Post
         </button>
-        <button type="button" class="btn btn-secondary ms-1">
+        <button type="button" data-bs-toggle="modal" data-bs-target="#cog-modal" class="btn btn-secondary ms-1">
           <i class="fa-solid fa-gear"></i>
           <i class="fa-solid fa-caret-down"></i>
         </button>
@@ -31,7 +31,7 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="new-post-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="new-post-modal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -53,6 +53,93 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" tabindex="-1" id="cog-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <p>Some text</p>
+          <p>Some text</p>
+          <p>Some text</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <button class="btn btn-primary" id="showView1">Show View 1</button>
+<button class="btn btn-secondary" id="showView2">Show View 2</button>
+
+
+<!-- GRID VIEW TEMPLATE 3x3-->
+<div id="view1" class="mt-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+    </div>
+
+     <div class="row">
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+    </div>
+
+     <div class="row">
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+    </div>
+  </div>
+</div>
+
+<!-- GRID VIEW TEMPLATE 1x1 -->
+<div id="view2" class="mt-3 d-none">
+  <div class="container w-50">
+    <div class="border rounded">
+      <div class="d-flex justify-content-between p-2">
+        <h4>My crazy dog Spark!</h4>
+        <p class="fw-normal">08/26</p>
+      </div>
+      <img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+     <div class="p-2">
+      <p>204 Likes</p>
+      <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
+     </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- FLIP BETWEEN GRID 3x3 OR GRID 1x1 --script -->
+<script>
+  const v1 = document.getElementById('view1');
+  const v2 = document.getElementById('view2');
+  const b1 = document.getElementById('showView1');
+  const b2 = document.getElementById('showView2');
+
+  b1.addEventListener('click', () => {
+    v1.classList.remove('d-none');
+    v2.classList.add('d-none');
+  });
+
+  b2.addEventListener('click', () => {
+    v2.classList.remove('d-none');
+    v1.classList.add('d-none');
+  });
+</script>
 
   <!-- Bootstrap JS bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
