eventListener for grid buttons

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </div>
     </nav>
     <div class="container d-flex justify-content-center align-items-center mt-3 mb-3">
-      <i class="bi bi-grid-3x3"></i>
-      <i class="bi bi-square-fill ms-3"></i>
+      <i class="bi bi-grid-3x3" id="showView1></i>
+      <i class="bi bi-square-fill ms-3" id="showView2"></i>
     </div>
   </div>
 
@@ -67,14 +67,9 @@
   </div>
 
 
-
-  <button class="btn btn-primary" id="showView1">Show View 1</button>
-<button class="btn btn-secondary" id="showView2">Show View 2</button>
-
-
 <!-- GRID VIEW TEMPLATE 3x3-->
 <div id="view1" class="mt-3">
-  <div class="container">
+  <div class="container mb-4">
     <div class="row">
       <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
       <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
@@ -97,7 +92,7 @@
 
 <!-- GRID VIEW TEMPLATE 1x1 -->
 <div id="view2" class="mt-3 d-none">
-  <div class="container w-50">
+  <div class="container w-50 mb-5">
     <div class="border rounded">
       <div class="d-flex justify-content-between p-2">
         <h4>My crazy dog Spark!</h4>
@@ -110,6 +105,38 @@
      </div>
     </div>
   </div>
+
+
+  <div class="container w-50 mb-5">
+    <div class="border rounded">
+      <div class="d-flex justify-content-between p-2">
+        <h4>The greatness of Croatia</h4>
+        <p class="fw-normal">04/09</p>
+      </div>
+      <img class="w-100" src="https://images.unsplash.com/photo-1571410756208-0d44d202f67e?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+     <div class="p-2">
+      <p>26985 Likes</p>
+      <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
+     </div>
+    </div>
+  </div>
+
+
+  <div class="container w-50 mb-5">
+    <div class="border rounded">
+      <div class="d-flex justify-content-between p-2">
+        <h4>Amazing GOAL by Cristiano!</h4>
+        <p class="fw-normal">06/10</p>
+      </div>
+      <img class="w-100" src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?q=80&w=3135&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+     <div class="p-2">
+      <p>26985 Likes</p>
+      <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
+     </div>
+    </div>
+  </div>
+
+  
 </div>
 
 
