--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <title>Instagram photo feed with bootstrap</title>
+  <link rel="stylesheet" href="./style.css">
+  <title> Instagram feed with bootstrap</title>
 </head>
 <body>
+  
   <div class="container-fluid p-0">
     <nav class="navbar navbar-light bg-light d-flex justify-content-between p-3">
       <div class="left">
@@ -25,8 +27,8 @@
       </div>
     </nav>
     <div class="container d-flex justify-content-center align-items-center mt-3 mb-3">
-      <i class="bi bi-grid-3x3" id="showView1></i>
-      <i class="bi bi-square-fill ms-3" id="showView2"></i>
+      <i class="bi bi-grid-3x3 icon-hover" id="showView1"></i>
+      <i class="bi bi-square-fill ms-3 icon-hover" id="showView2"></i>
     </div>
   </div>
 
@@ -168,7 +170,7 @@
   });
 </script>
 
-  <!-- Bootstrap JS bundle (includes Popper) -->
+  <!-- BS JS bundle(_-_ includes Poper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
