--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#new-post-modal">
           Create a New Post
         </button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#cog-modal" class="btn btn-secondary ms-1">
+        <button type="button" title="Popover title" data-bs-toggle="popover" data-bs-content="This is the content" class="btn btn-secondary ms-1">
           <i class="fa-solid fa-gear"></i>
           <i class="fa-solid fa-caret-down"></i>
         </button>
+        
       </div>
     </nav>
     <div class="container d-flex justify-content-center align-items-center mt-3 mb-3">
@@ -31,6 +32,9 @@
       <i class="bi bi-square-fill ms-3 icon-hover" id="showView2"></i>
     </div>
   </div>
+
+
+  
 
   <!-- Modal -->
   <div class="modal fade" id="new-post-modal" tabindex="-1" aria-hidden="true">
@@ -56,22 +60,10 @@
     </div>
   </div>
 
-  <div class="modal fade" tabindex="-1" id="cog-modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          <p>Some text</p>
-          <p>Some text</p>
-          <p>Some text</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
 
 <!-- GRID VIEW TEMPLATE 3x3-->
 <div id="view1" class="mt-3">
-  <div class="container mb-4">
+  <div class="container-fluid mb-4">
     <div class="row">
       <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
       <div class="col-4 p-1"><img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
@@ -95,13 +87,13 @@
 <!-- GRID VIEW TEMPLATE 1x1 -->
 <div id="view2" class="mt-3 d-none">
   <div class="container w-50 mb-5">
-    <div class="border rounded">
-      <div class="d-flex justify-content-between p-2">
+    <div class="border rounded ">
+      <div class="d-flex justify-content-between px-2 py-4">
         <h4>My crazy dog Spark!</h4>
         <p class="fw-normal">08/26</p>
       </div>
       <img class="w-100" src="https://images.unsplash.com/photo-1606103920295-9a091573f160?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-     <div class="p-2">
+     <div class="px-2 py-4">
       <p>204 Likes</p>
       <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
      </div>
@@ -111,12 +103,12 @@
 
   <div class="container w-50 mb-5">
     <div class="border rounded">
-      <div class="d-flex justify-content-between p-2">
+      <div class="d-flex justify-content-between px-2 py-4">
         <h4>The greatness of Croatia</h4>
         <p class="fw-normal">04/09</p>
       </div>
       <img class="w-100" src="https://images.unsplash.com/photo-1571410756208-0d44d202f67e?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-     <div class="p-2">
+     <div class="px-2 py-4">
       <p>26985 Likes</p>
       <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
      </div>
@@ -126,12 +118,12 @@
 
   <div class="container w-50 mb-5">
     <div class="border rounded">
-      <div class="d-flex justify-content-between p-2">
+      <div class="d-flex justify-content-between px-2 py-4">
         <h4>Amazing GOAL by Cristiano!</h4>
         <p class="fw-normal">06/10</p>
       </div>
       <img class="w-100" src="https://images.unsplash.com/photo-1570498839593-e565b39455fc?q=80&w=3135&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-     <div class="p-2">
+     <div class="px-2 py-4">
       <p>26985 Likes</p>
       <p class="fw-normal">This is an example of a very good photo that you can post on instagram</p>
      </div>
@@ -149,11 +141,8 @@
 
 
 
-
-
-
-<!-- FLIP BETWEEN GRID 3x3 OR GRID 1x1 --script -->
 <script>
+  //FLIP BETWEEN GRID 3x3 OR GRID 1x1 --script
   const v1 = document.getElementById('view1');
   const v2 = document.getElementById('view2');
   const b1 = document.getElementById('showView1');
@@ -168,9 +157,14 @@
     v2.classList.remove('d-none');
     v1.classList.add('d-none');
   });
+  // run after Bootstrap is available
+  document.addEventListener('DOMContentLoaded', () => {
+    const els = document.querySelectorAll('[data-bs-toggle="popover"]');
+    [...els].forEach(el => new bootstrap.Popover(el, { container: 'body' }));
+  });
 </script>
 
-  <!-- BS JS bundle(_-_ includes Poper) -->
+  <!-- BS JS bundle(_-_ includes Popper for popoevers) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
