--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title> Instagram feed with bootstrap</title>
 </head>
 <body>
+
+  
   
   <div class="container-fluid p-0">
     <nav class="navbar navbar-light bg-light d-flex justify-content-between p-3">
       <div class="left">
-        <i class="fa-brands fa-instagram"> instagram</i>
+        <i class="fa-brands fa-instagram"></i> Instagram
       </div>
       <div class="right d-flex justify-content-between">
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#new-post-modal">
